# nixos-config

./: .envrc  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .s3cfg  .sops.yaml  .workmux.yaml  AGENTS.md  CLAUDE.md  DENDRITIC.md  NEW_MACHINE.md  README.md  TODO.org  bootstrap.gpg  configuration.nix  configuration.nix-amon  configuration.nix-balthamel  configuration.nix-barbatos  configuration.nix-demandred  configuration.nix-fileserver  configuration.nix-forgejo  configuration.nix-fresh-ct  configuration.nix-fusion-vm  configuration.nix-ishamael  configuration.nix-kodi  configuration.nix-lanfear  configuration.nix-monitor  configuration.nix-naberius  configuration.nix-nix-build  configuration.nix-ul20ft  configuration.nix-valak  configuration.nix.template  flake.nix  flake.nix-disabled  hardware-configuration.nix  inventory.json  iommu.sh  ipam.dhall  ipam.json  (+4 more)
monitoring/: README.md  pyproject.toml
monitoring/monitoring/: __init__.py  __main__.py
monitoring/monitoring/alerts/: __init__.py  disk_space.py
monitoring/monitoring/dashboards/: __init__.py  disk_space.py
monitoring/tests/: test_alerts.py  test_dashboards.py
python-with-emacs/: .gitignore  pyproject.toml  shell.nix
python-with-emacs/python_with_emacs/: __init__.py
python-with-emacs/tests/: test_python_with_emacs.py
tools/ncf/: pyproject.toml
tools/ncf/ncf/: __init__.py  __main__.py  cli.py  config.py  external.py  ipam.py  models.py  nix.py  output.py  proxmox_api.py  secrets_inject.py  sops_yaml.py
tools/ncf/ncf/commands/: __init__.py  add_machine.py  aws_env.py  build.py  ci.py  deploy.py  eval.py  generate.py  init_machine.py  ip_allocate.py  ipam_cmd.py  iso.py  iso_installer.py  list_machines.py  verify.py  (+7 more)
tools/ncf/tests/: __init__.py  conftest.py  test_cli.py  test_external_deps.py  test_pci_passthrough.py  test_secrets_inject.py
tools/nixos-secrets/: pyproject.toml
tools/nixos-secrets/nixos_secrets/: __init__.py  __main__.py  cli.py  config.py  external.py  models.py  sops_yaml.py
(+1286 files in other folders)
