[tool.poetry]
name = "python-with-emacs"
version = "0.1.0"
description = ""
authors = ["Alexey Lebedeff <binarin@binarin.ru>"]

[tool.poetry.dependencies]
python = "^3.6"
PyYAML = "^5.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
python-language-server = {extras = ["all"], version = "^0.35.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
