[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ncf"
version = "0.1.0"
description = "CLI tool for NixOS configuration management"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.9.0",
  "rich>=13.0.0",
  "ruamel.yaml>=0.18.0",
  "pydantic>=2.0.0",
  "gitpython>=3.1.0",
  "jinja2>=3.0.0",
  "toml>=0.10.0",
]

[project.scripts]
ncf = "ncf.cli:app"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
ncf = ["templates/*.j2"]
