[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nixos-secrets"
version = "0.1.0"
description = "CLI tool for managing NixOS secrets"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "ruamel.yaml>=0.18.0",
    "pydantic>=2.0.0",
    "gitpython>=3.1.0",
]

[project.scripts]
nixos-secrets = "nixos_secrets.cli:app"

[tool.setuptools.packages.find]
where = ["."]
